# brom

./: .editorconfig  .env.example  .gitignore  .narsil-baseline.json  Cargo.toml  README.md  api.md  architecture.md  context.md  coverage.txt  expand.rs  expanded.rs  justfile  lint_suppression_inventory.md  macro_err.txt  phase5.md  phase6.md  redirection_check.txt  roadmap.md  rustfmt.toml  sgconfig.yml  spec.md  task.md  todos.md
.agent/rules/: audit-rules.md  builder-rules.md  doc-rules.md  feature-rules.md  ipr.md  issue-rules.md
.agent/workflows/: ago.md  architecture.md  audit.md  brainstorm.md  build.md  design.md  feature.md  issue.md  log-audit-generic.md  plan-making.md  review.md  spec.md  toolcheck.md  update-doc.md
.agents/rules/: audit-rules.md  builder-rules.md  coding-standard.md  design-rules.md  doc-rules.md  ipr.md
.agents/scripts/: Audit-Codebase.ps1  Check-Environment.ps1  Check-Logs.ps1  Git-Checkpoint.ps1  Load-Context.ps1  Scan-ProjectDocs.ps1  Sync-TaskList.ps1
.agents/skills/frontend-design/: SKILL.md
.agents/workflows/: ago.md  architecture.md  audit.md  brainstorm.md  build.md  design.md  feature.md  issue.md  log-audit-generic.md  plan-making.md  review.md  spec.md  toolcheck.md  update-doc.md
.ast-grep/: README.md
.ast-grep/rules/: arc-vec-antipattern.yml  block-on-in-async.yml  hardcoded-url.yml  missing-instrument.yml  mutex-option-antipattern.yml  raw-thread-spawn.yml  raw-tokio-spawn.yml  scattered-dotenv.yml  scattered-env-var.yml  sqlx-outside-repo.yml  unwrap-in-production.yml  wildcard-import.yml
.gemini/antigravity/skills/agency-brand-guardian/: SKILL.md
.gemini/antigravity/skills/agency-image-prompt-engineer/: SKILL.md
.gemini/antigravity/skills/agency-inclusive-visuals-specialist/: SKILL.md
.gemini/antigravity/skills/agency-ui-designer/: SKILL.md
.gemini/antigravity/skills/agency-ux-architect/: SKILL.md
.gemini/skills/agency-brand-guardian/: SKILL.md
.gemini/skills/agency-image-prompt-engineer/: SKILL.md
.gemini/skills/agency-inclusive-visuals-specialist/: SKILL.md
.gemini/skills/agency-ui-designer/: SKILL.md
.gemini/skills/agency-ux-architect/: SKILL.md
.gemini/skills/agency-ux-researcher/: SKILL.md
.gemini/skills/agency-visual-storyteller/: SKILL.md
.gemini/skills/agency-whimsy-injector/: SKILL.md
.gemini/skills/compress-context/: SKILL.md
.gemini/skills/execute-plan-step/: SKILL.md
.gemini/skills/generate-build-report/: SKILL.md
.gemini/skills/git-checkpoint/: SKILL.md
.gemini/skills/run-phase-gate/: SKILL.md
.gemini/skills/run-quality-gate/: SKILL.md
.gemini/skills/rust-observability/: SKILL.md
.gemini/skills/rust-patterns/: SKILL.md
.gemini/skills/rust-project-setup/: SKILL.md
.gemini/skills/rust-testing/: SKILL.md
.gemini/skills/scaffold-audit-report/: SKILL.md
.gemini/skills/scaffold-feature-report/: SKILL.md
.gemini/skills/scaffold-issue-report/: SKILL.md
.gemini/skills/scaffold-plan/: SKILL.md
.gemini/skills/svelte-patterns/: SKILL.md
.gemini/skills/typescript-patterns/: SKILL.md
.gemini/skills/validate-task-alignment/: SKILL.md
.gemini/skills/web-fundamentals/: SKILL.md
.githooks/: pre-commit
admin/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
admin/src/: app.rs  auth.rs  lib.rs  main.css
admin/src/components/: breadcrumbs.rs  inputs.rs  layout.rs  mod.rs  stat_card.rs  table.rs
admin/src/context/: mod.rs  schema_ctx.rs
admin/src/pages/: collection_list.rs  dashboard.rs  form_editor.rs  login.rs  mod.rs  settings.rs
crates/brom/: Cargo.toml
crates/brom-auth/: Cargo.toml
crates/brom-auth/src/: api_key.rs  error.rs  lib.rs  password.rs  rbac.rs  session.rs
crates/brom-cli/: Cargo.toml
crates/brom-cli/src/: config.rs  diff.rs  lib.rs  main.rs
crates/brom-cli/src/snapshots/: brom_cli__diff__tests__generate_migration_sql_snapshots-2.snap  brom_cli__diff__tests__generate_migration_sql_snapshots.snap
crates/brom-cli/tests/: diff_test.rs
crates/brom-core/: Cargo.toml
crates/brom-core/src/: entity.rs  error.rs  lib.rs  relation.rs  schema.rs
crates/brom-db/: Cargo.toml
crates/brom-db/src/: api_key_store.rs  error.rs  introspect.rs  lib.rs  migration.rs  pool.rs  repository.rs  session_store.rs
crates/brom-db/src/tests/: mod.rs  repository_test.rs
crates/brom-db/tests/: introspect_test.rs  migration_test.rs  pool_test.rs  repository_test.rs  rollback_test.rs
crates/brom-macros/: Cargo.toml
crates/brom-macros/src/: entity.rs  lib.rs  openapi.rs  routes.rs  schema.rs
crates/brom-macros/src/snapshots/: brom_macros__entity__tests__snapshot_basic_struct.snap  brom_macros__entity__tests__snapshot_basic_struct.snap.new  brom_macros__entity__tests__snapshot_custom_table_name.snap  brom_macros__entity__tests__snapshot_custom_table_name.snap.new  brom_macros__entity__tests__snapshot_field_constraints.snap  brom_macros__entity__tests__snapshot_field_constraints.snap.new  brom_macros__entity__tests__snapshot_link_relationship.snap  brom_macros__entity__tests__snapshot_link_relationship.snap.new  brom_macros__entity__tests__snapshot_many_to_many_relationship.snap  brom_macros__entity__tests__snapshot_many_to_many_relationship.snap.new
crates/brom-macros/tests/: compile_test.rs
crates/brom-macros/tests/fixtures/: fail_bad_attribute.rs  fail_bad_attribute.stderr  fail_not_struct.rs  fail_not_struct.stderr  pass_attributes.rs  pass_basic.rs
crates/brom-macros/tests/ui/: pass_web.rs
crates/brom-server/: Cargo.toml
crates/brom-server/src/: admin_ui.rs  api_keys.rs  config.rs  error.rs  extractor.rs  lib.rs  middleware.rs  openapi.rs  response.rs  router.rs  schema_api.rs  state.rs
crates/brom-server/tests/: api_test.rs  public_api_test.rs
crates/brom-server/tests/common/: mod.rs
crates/brom/src/: app.rs  lib.rs
crates/brom/tests/: api_test.rs  derive_test.rs  public_api_test.rs
crates/brom/tests/common/: mod.rs
crates/brom/tests/ui/: pass_web.rs
design/: design-spec.md
examples/simple_blog/: Cargo.toml  README.md
examples/simple_blog/src/: main.rs
global/: GEMINI.md
(+3 files in other folders)
