[workspace]
resolver = "2"
members = [
    "crates/brom-core",
    "crates/brom-macros",
    "crates/brom-db",
    "crates/brom-auth",
    "crates/brom-server",
    "crates/brom-cli",
    "crates/brom",
    "admin"
]
default-members = [
    "crates/brom-core",
    "crates/brom-macros",
    "crates/brom-db",
    "crates/brom-auth",
    "crates/brom-server",
    "crates/brom-cli",
    "crates/brom"
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "deny"
missing_panics_doc = "deny"
undocumented_unsafe_blocks = "deny"
cast_possible_truncation = "deny"
large_futures = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
unwrap_used = "deny"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }
mockall = "0.13"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }
trybuild = { version = "1.0", features = ["diff"] }
hex = "0.4"
dotenvy = "0.15"
tracing-appender = "0.2"
argon2 = "0.5"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
utoipa = { version = "5.3" }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
insta = "1"
prettyplease = "0.2"

brom-core = { path = "crates/brom-core" }
brom-macros = { path = "crates/brom-macros" }
brom-db = { path = "crates/brom-db" }
brom-auth = { path = "crates/brom-auth" }
brom-server = { path = "crates/brom-server" }
brom-cli = { path = "crates/brom-cli" }
