[package]
name = "admin"
version = "0.1.0"
edition = "2024"
publish = false
    
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
brom-core = { path = "../crates/brom-core" }
console_error_panic_hook = "0.1"
tracing = "0.1"
