[package]
name = "brom-auth"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
brom-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
argon2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }

[features]
testing = ["mockall", "argon2", "rand", "sha2"]

[dev-dependencies]
serde_json.workspace = true
