[package]
name = "brom-auth"
version = "0.1.0-beta"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
brom-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
mockall = { workspace = true, optional = true }

[features]
testing = ["mockall"]

[dev-dependencies]
serde_json.workspace = true
