[package]
name = "brom-cli"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
clap.workspace = true
brom-core.workspace = true
brom-db.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
tracing-appender.workspace = true
