[package]
name = "brom-cli"
version = "0.1.0-beta"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
brom-core.workspace = true
brom-db.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
tracing-appender.workspace = true

[dev-dependencies]
rand.workspace = true
insta = { version = "1.34", features = ["yaml"] }
