[package]
name = "brom-core"
version = "0.1.0-beta"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
mockall = { workspace = true, optional = true }

[features]
testing = ["mockall"]
