[package]
name = "brom-db"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
brom-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
brom-auth = { workspace = true, features = ["testing"] }
rand = { workspace = true, features = ["std"] }
sha2.workspace = true
