[package]
name = "brom-macros"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
 
[dev-dependencies]
trybuild.workspace = true
brom-core = { path = "../brom-core" }
serde.workspace = true
serde_json.workspace = true
