[package]
name = "brom-macros"
version = "0.1.0-beta"
edition = "2024"
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
 
[dev-dependencies]
trybuild.workspace = true
brom-core = { path = "../brom-core" }
brom-server = { path = "../brom-server" }
brom-db = { path = "../brom-db" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
utoipa = { workspace = true }
insta.workspace = true
prettyplease.workspace = true
tracing.workspace = true
