[package]
name = "brom-server"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
brom-core.workspace = true
brom-db.workspace = true
brom-auth.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true

