[package]
name = "brom-server"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
brom-core.workspace = true
brom-db.workspace = true
brom-auth = { workspace = true, features = ["testing"] }
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
tower-http.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
brom-auth = { workspace = true, features = ["testing"] }
brom-db = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
