[package]
name = "brom"
version = "0.1.0-beta"
edition = "2024"
publish = false
description = "A code-first headless CMS framework for Rust."

[lints]
workspace = true

[dependencies]
brom-core.workspace = true
brom-macros.workspace = true
brom-db.workspace = true
brom-auth.workspace = true
brom-server.workspace = true
axum.workspace = true
utoipa.workspace = true
serde.workspace = true
tower-http.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[dev-dependencies]
brom-macros = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
brom-auth = { workspace = true, features = ["testing"] }
brom-db = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
trybuild = { workspace = true }
rand = { workspace = true }
