[package]
name = "simple-blog"
version = "0.1.0"
edition = "2024"
publish = false
description = "A minimal blog example demonstrating the brom headless CMS framework."

[lints]
workspace = true

[dependencies]
brom = { path = "../../crates/brom" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
